force-app/main/default/objects/ssot__AssessmentSignature__dlm/fields/ssot__AssessmentId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssessmentId__c</fullName>
    <label>Assessment</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssessmentId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>