force-app/main/default/objects/ssot__AssessmentSignature__dlm/fields/ssot__PlaceText__c.field-meta.xml
<CustomField>
    <fullName>ssot__PlaceText__c</fullName>
    <label>Place</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PlaceText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>