force-app/main/default/objects/ssot__AssessmentSignature__dlm/fields/ssot__rel_1720290992946_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720290992946_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AssessmentSignature_SigneeObjectName_rel</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>AssessmentSignature_SigneeObjectName_rel</relationshipLabel>
    <relationshipName>rel_1720290992946_end</relationshipName>
    <type>Lookup</type>
</CustomField>