force-app/main/default/objects/ssot__AssessmentSignature__dlm/fields/ssot__rel_1720291286362_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291286362_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AssessmentSignature_SigneeId_map_Acc_rel</label>
    <referenceTo>ssot__AccountContact__dlm</referenceTo>
    <relationshipLabel>AssessmentSignature_SigneeId_map_Acc_rel</relationshipLabel>
    <relationshipName>rel_1720291286362_end</relationshipName>
    <type>Lookup</type>
</CustomField>