force-app/main/default/objects/ssot__AssessmentSignature__dlm/fields/ssot__SignedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__SignedDateTime__c</fullName>
    <label>Signed Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SignedDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>