force-app/main/default/objects/ssot__AssessmentSignature__dlm/fields/ssot__SigneeObjectName__c.field-meta.xml
<CustomField>
    <fullName>ssot__SigneeObjectName__c</fullName>
    <label>Signee Object Name</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SigneeObjectName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>